istioctl/cmd/testdata/authz/converter/policy-clusterRbacConfig-exclusion-namespace-want.yaml
# Generated from ClusterRbacConfig with mode ON_WITH_EXCLUSION. This policy is in root namespace and will deny all requests in the mesh by default.
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: generated-global-deny-all
  namespace: my-root-namespace
spec:
  {}
---
# Generated from ClusterRbacConfig with mode ON_WITH_EXCLUSION on namespace "ns1". This policy will allow all requests to namespace "ns1" by default.
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: generated-namespace-allow-all
  namespace: ns1
spec:
  rules:
  - {}
---
# Generated from ClusterRbacConfig with mode ON_WITH_EXCLUSION on namespace "ns2". This policy will allow all requests to namespace "ns2" by default.
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: generated-namespace-allow-all
  namespace: ns2
spec:
  rules:
  - {}
---
# Generated from ClusterRbacConfig with mode ON_WITH_EXCLUSION on namespace "ns3". This policy will allow all requests to namespace "ns3" by default.
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: generated-namespace-allow-all
  namespace: ns3
spec:
  rules:
  - {}
---
